[package]
name = "css_controls"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
once_cell = "1"
locks = { git = "https://github.com/HDR-Development/smashline" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
